module(
    name = "gazelle_cabal",
    version = "0.0.0",
)

bazel_dep(name = "rules_haskell", version = "0.19")

stack_snapshot = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)
use_repo(stack_snapshot, "stackage")
stack_snapshot.package(name = "directory")
stack_snapshot.package(name = "filepath")
stack_snapshot.package(name = "json")

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "io_tweag_gazelle_cabal_deps")

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.12")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_bazel_gazelle", "com_github_bazelbuild_buildtools", "com_github_bazelbuild_rules_go")

##### dev dependencies

bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0", dev_dependency = True)

nix_repo = use_extension(
    "@rules_nixpkgs_core//extensions:repository.bzl",
    "nix_repo",
    dev_dependency = True,
)
nix_repo.file(
    name = "nixpkgs",
    file = ":nixpkgs.nix",
)
use_repo(nix_repo, "nixpkgs")

# TODO Remove once rules_haskell_nix is in the BCR.

bazel_dep(name = "rules_haskell_nix", dev_dependency = True)

# Needed for custom toolchain definitions
# TODO update once a bzlmod API for Nix provided toolchains exists.
bazel_dep(name = "rules_nixpkgs_cc", dev_dependency = True)
bazel_dep(name = "rules_nixpkgs_posix", dev_dependency = True)

RULES_HASKELL_REV = "0.18"

RULES_HASKELL_INTEGRITY = "sha256-0fDhvU8dXiSLKIK/3HwxoUYRL52FudLw73fnjQLsukU="

archive_override(
    module_name = "rules_haskell_nix",
    integrity = RULES_HASKELL_INTEGRITY,
    strip_prefix = "rules_haskell-%s/rules_haskell_nix" % RULES_HASKELL_REV,
    urls = ["https://github.com/tweag/rules_haskell/releases/download/v{REV}/rules_haskell-{REV}.tar.gz".format(REV = RULES_HASKELL_REV)],
)

RULES_NIXPKGS_REV = "0.13.0"

RULES_NIXPKGS_INTEGRITY = "sha256-MCcfe9OA5OIOTXEywySUbE/bwx6+C7tmOKD2GjfnQ5c="

archive_override(
    module_name = "rules_nixpkgs_cc",
    integrity = RULES_NIXPKGS_INTEGRITY,
    strip_prefix = "rules_nixpkgs-%s/toolchains/cc" % RULES_NIXPKGS_REV,
    urls = ["https://github.com/tweag/rules_nixpkgs/releases/download/v{REV}/rules_nixpkgs-{REV}.tar.gz".format(REV = RULES_NIXPKGS_REV)],
)

archive_override(
    module_name = "rules_nixpkgs_posix",
    integrity = RULES_NIXPKGS_INTEGRITY,
    strip_prefix = "rules_nixpkgs-%s/toolchains/posix" % RULES_NIXPKGS_REV,
    urls = ["https://github.com/tweag/rules_nixpkgs/releases/download/v{REV}/rules_nixpkgs-{REV}.tar.gz".format(REV = RULES_NIXPKGS_REV)],
)

declare_nix_toolchains = use_extension(
    "@rules_haskell_nix//private:declare_toolchains.bzl",
    "declare_nix_toolchains",
    dev_dependency = True,
)
use_repo(
    declare_nix_toolchains,
    "all_nix_toolchains",
)

# NOTE this only works for a single GHC version, but downstream modules may override
GHC_VERSION = "9.4.8"

stackage = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
    dev_dependency = True,
)
stackage.snapshot(local_snapshot = "//:snapshot-%s.yaml" % GHC_VERSION)

nix_haskell_toolchains = use_extension(
    "@rules_haskell_nix//extensions:nix_haskell_toolchains.bzl",
    "nix_haskell_toolchains",
    dev_dependency = True,
)
nix_haskell_toolchains.new(
    attribute_path = "haskell.compiler.ghc" + GHC_VERSION.replace(".", ""),
    repository = "@nixpkgs",
    version = GHC_VERSION,
)
use_repo(
    nix_haskell_toolchains,
    "nix_haskell_toolchains_configurations",
    # TODO register via rules_nixpkgs_posix once supported.
    "all_posix_toolchains",
)

register_toolchains(
    "@all_nix_toolchains//:all",
    "@all_posix_toolchains//:all",
    dev_dependency = True,
)
