module(name = "gazelle_cabal_example")

bazel_dep(name = "gazelle_cabal", repo_name = "io_tweag_gazelle_cabal")
local_path_override(module_name = "gazelle_cabal", path = "..")

bazel_dep(name = "rules_haskell")
archive_override(
    module_name = "rules_haskell",
    urls = ["https://github.com/tweag/rules_haskell/archive/155ba21c7d315cc421ee3f17a1c09b758cc7279d.tar.gz"],
    strip_prefix = "rules_haskell-155ba21c7d315cc421ee3f17a1c09b758cc7279d",
    integrity = "sha384-dIsFufYml0KGSUiC6jhY9ClMv/yEW1kGof7fLahSwfbWd28jLiwMGBGUuoOsQwWf",
)

bazel_dep(name = "rules_nixpkgs_core")
archive_override(
    module_name = "rules_nixpkgs_core",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/7e627d76ba65d6c42586fc265e46bd370672b4eb.tar.gz"],
    strip_prefix = "rules_nixpkgs-7e627d76ba65d6c42586fc265e46bd370672b4eb/core",
    integrity = "sha384-N2bS5BvSk8QMjhmuxdeeve9PBJUTwFOHufMV4sDgaviwXNdCGc7JaJPqwqZV1TbC",
)

bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.33.0", repo_name = "bazel_gazelle")
