cabal-version:      2.4
name:               package-a
version:            0.1.0.0

author:             Facundo Domínguez
maintainer:         facundo.dominguez@tweag.io

extra-source-files: CHANGELOG.md

library
    exposed-modules:
      PackageA.Exposed.A
    other-modules:
      PackageA.Other.B
    build-depends:
      base,
      inspection-testing
    ghc-options: -Wall -Werror -Wno-orphans
    hs-source-dirs: src
    extra-libraries: m
    default-language: Haskell2010

executable package-a
    main-is: Main.hs
    other-modules:
      PackageA.Other.C
    build-depends:
      base,
      package-a
    ld-options: -optl-pthread
    hs-source-dirs: app
    default-language: Haskell2010

executable executable-a
    main-is: Main.hs
    buildable: False
    -- Leave PackageA.Other.C out so compilation fails
    -- if this component isn't ignored
    -- other-modules:
    --  PackageA.Other.C
    build-depends:
      base,
      package-a
    hs-source-dirs: app
    default-language: Haskell2010
