cabal-version:      2.4
name:               package-a
version:            0.1.0.0

author:             Facundo Domínguez
maintainer:         facundo.dominguez@tweag.io

extra-source-files: CHANGELOG.md

library
    exposed-modules:
      PackageA.Exposed.A
    other-modules:
      PackageA.Other.B
      PackageA.Other.D
      PackageA.Other.E
    build-depends:
      base,
      inspection-testing
    ghc-options: -Wall -Werror -Wno-orphans
    hs-source-dirs: src
    extra-libraries: m z
    default-language: Haskell2010

executable package-a
    main-is: Main.hs
    other-modules:
      PackageA.Other.C
    build-depends:
      base,
      package-a
    ld-options: -optl-pthread
    hs-source-dirs: app
    default-language: Haskell2010

executable executable-a
    main-is: Main.hs
    buildable: False
    -- Leave PackageA.Other.C out so compilation fails
    -- if this component isn't ignored
    -- other-modules:
    --  PackageA.Other.C
    build-depends:
      base,
      package-a
    hs-source-dirs: app
    default-language: Haskell2010

benchmark bench-a
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules:
      PackageA.Other.C
    build-depends:
      base,
      package-a
    hs-source-dirs: app
    default-language: Haskell2010

benchmark bench-b
    type: exitcode-stdio-1.0
    main-is: MainB.hs
    other-modules:
      PackageA.Other.C
    build-depends:
      -- base, Droppped on purpose to test that gazelle_cabal keeps dependencies marked with # keep
      package-a
    hs-source-dirs: app
    default-language: Haskell2010
