cabal-version:      3.0
name:               package-a
version:            0.1.0.0

author:             Facundo Domínguez
maintainer:         facundo.dominguez@tweag.io

extra-source-files: CHANGELOG.md

library sublibPriv
    build-depends:
      base

library sublibPub
    visibility: public
    build-depends:
      base

library colonPriv
    build-depends:
      base

library colonPub
    visibility: public
    build-depends:
      base

library
    exposed-modules:
      PackageA.Exposed.A
    other-modules:
      PackageA.Other.B
      PackageA.Other.D
      PackageA.Other.E
      PackageA.Other.LoopBoot
      PackageA.Other.LoopNonBoot
    build-depends:
      base,
      inspection-testing,
      -- reference to internal
      -- public and private libraries
      sublibPub,
      sublibPriv,
      -- reference with 'experimental' colon syntax
      -- both public and private internal library
      package-a:{colonPub, colonPriv},
      -- package-a:colonPrivate,
      -- reference to public, internal library
      -- from package-b
      package-b:sublibPub,
      -- reference to main libraries from other packages
      -- works with either non colon syntax 'package-c'
      -- or with colon syntax 'package-b:package-b'
      package-b:package-b,
      package-c,
      -- reference repository library
      -- with 'experimental' colon syntax
      tasty:tasty
    ghc-options: -Wall -Werror -Wno-orphans
    hs-source-dirs: src
    extra-libraries: m z
    default-language: Haskell2010

executable package-a
    main-is: Main.hs
    other-modules:
      PackageA.Other.C
    build-depends:
      base,
      -- mtl added to check that the internal library from package-b
      -- doesn't shadow dependencies in other pkgs
      mtl,
      package-a
    ld-options: -optl-pthread
    hs-source-dirs: app
    default-language: Haskell2010

executable executable-a
    main-is: Main.hs
    buildable: False
    -- Leave PackageA.Other.C out so compilation fails
    -- if this component isn't ignored
    -- other-modules:
    --  PackageA.Other.C
    build-depends:
      base,
      package-a
    hs-source-dirs: app
    default-language: Haskell2010

benchmark bench-a
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules:
      PackageA.Other.C
    build-depends:
      base,
      package-a
    hs-source-dirs: app
    default-language: Haskell2010

benchmark bench-b
    type: exitcode-stdio-1.0
    main-is: MainB.hs
    other-modules:
      PackageA.Other.C
    build-depends:
      -- base, Droppped on purpose to test that gazelle_cabal keeps dependencies marked with # keep
      package-a
    hs-source-dirs: app
    default-language: Haskell2010
