load(
    "@bazel_gazelle//:def.bzl",
    "DEFAULT_LANGUAGES",
    "gazelle",
    "gazelle_binary",
)
load("@rules_haskell//haskell:defs.bzl", "ghc_plugin")

# gazelle:cabal_extra_libraries z=@zlib.dev//:zlib
# gazelle:cabal_haskell_package_repo stackage-b
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@io_tweag_gazelle_cabal//gazelle_cabal"],
)

gazelle(
    name = "gazelle-update-repos",
    command = "update-repos",
    extra_args = [
        "-lang",
        "gazelle_cabal",
        "stackage-b",
    ],
    gazelle = ":gazelle_binary",
)

ghc_plugin(
    name = "inspection-testing-plugin",
    module = "Test.Inspection.Plugin",
    visibility = ["//:__subpackages__"],
    deps = ["@stackage-b//:inspection-testing"],
)
